[tool.poetry]
name = "Axolotl"
version = "0.1.0"
description = ""
authors = ["TheLusifer <thelusifer@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
